--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI="mongodb+srv://rbarszcz:57PcrjwcQuWi4164@cluster0.4m5hjpn.mongodb.net"
-CLERK_WEBHOOK_SECRET=""
+CLERK_WEBHOOK_SECRET="whsec_vOZWrWWZJej1mHwZXnNLAhVrNYjaKlFk"
