got register company done

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,9 @@
+JWT_SECRET="dev#secret"
+
 MONGODB_URI="mongodb+srv://rbarszcz:57PcrjwcQuWi4164@cluster0.4m5hjpn.mongodb.net"
 CLERK_WEBHOOK_SECRET="whsec_vOZWrWWZJej1mHwZXnNLAhVrNYjaKlFk"
+
+# Cloudinary Setup
+CLOUDINARY_NAME="diqgsbtpu"
+CLOUDINARY_API_KEY="724496875599825"
+CLOUDINARY_SECRET_KEY="_U3edbPxtWvcybDTkNzvZwD0CaI"
